changed made to views db, routes, app config and added messenger

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/css/loginpage.css": "/css/loginpage.css",
-    "/css/createpage.css": "/css/createpage.css"
+    "/css/app.css": "/css/app.css"
 }
